complete cusotm hours and schedule service tests